--- a/public/playerStyle.css
+++ b/public/playerStyle.css
@@ -4,3 +4,11 @@
     padding: 10px;
     margin-top: 25px;
 }
+.navbar{
+    padding: 10px;
+    font: boldest;
+    height: 77px;
+  }
+  .link{
+    font-size: larger;
+  }
