--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,4 @@
-h3{
-  text-align: center;
-  padding: 5px;
-  background-color: blueviolet;
-  color:chartreuse;
-  border-style: groove;
-  border-radius: 10px;
 
-}
 .ui-raised-card{
   margin-top: 50px;
  
@@ -14,7 +6,6 @@ h3{
 .player-selector{
   padding: 25px;
   margin-top: 25px;
-  background-color: chartreuse;
 }
 .buttons{
   margin-left: 25%;
@@ -22,7 +13,7 @@ h3{
 }
 
 .body{
-  background-color: blueviolet;
+  background-color: cornflowerblue;
 }
 .navbar{
   padding: 10px;
